--- a/src/components/sections/CallToAction.astro
+++ b/src/components/sections/CallToAction.astro
@@ -18,9 +18,11 @@ import plantasImg from "@/assets/img/plantas.webp";
           Ya seas un estudiante, profesional, emprendedor o inovador.
         </p>
 
-        <div class="space-x-2 *:px-4 *:py-2 *:rounded-full">
-          <a href="/contacto" class="bg-zinc-500/60">Contactanos</a>
-          <a href="/producto" class="bg-primary-green">Ver producto</a>
+        <div
+          class="flex flex-col sm:flex-row gap-2 *:px-4 *:py-2 *:rounded-full"
+        >
+          <a href="/contacto" class="w-fit bg-zinc-500/60">Contactanos</a>
+          <a href="/producto" class="w-fit bg-primary-green">Ver producto</a>
         </div>
       </div>
 
