--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,7 +45,7 @@ const currentPath = new URL(Astro.request.url).pathname;
       </ul>
     </div>
 
-    <div class="shrink-0 max-w-40 md:w-full space-x-4">
+    <div class="shrink-0 space-x-4">
       <button
         type="button"
         aria-label="Carrito de compras"
