--- a/src/components/sections/Vision.astro
+++ b/src/components/sections/Vision.astro
@@ -6,12 +6,13 @@ import BoltIcon from "@/assets/icons/BoltIcon.astro";
 <section
   class="flex flex-col justify-center items-center gap-8 py-16 text-center"
 >
-  <BadgeTitle label="Deseando compartir la respoabilidad.">
+  <BadgeTitle label="Deseando compartir la responsabilidad.">
     <BoltIcon />
   </BadgeTitle>
 
   <p class="text-2xl max-w-4/5">
-    Tenemos claro lo que queremos lograr: ser la empresa líder en soluciones de
-    escritura sustentable promoviendo la ecología en productos del día a día.
+    Tenemos claro la visión de lo que queremos lograr: Ser la empresa líder en
+    soluciones de escritura sustentable promoviendo la ecología en productos del
+    día a día.
   </p>
 </section>
