--- a/src/pages/producto.astro
+++ b/src/pages/producto.astro
@@ -2,6 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 import Funcionamiento from "@/components/sections/Funcionamiento.astro";
 import Build from "@/components/sections/Build.astro";
+import Carousel from "@/components/Carousel.astro";
 
 import empaqueImg from "@/assets/img/producto.jpeg";
 import ecolapiz from "@/assets/img/ecolapiz.webp";
@@ -52,7 +53,7 @@ const caracteristicas = [
     class="flex flex-col md:flex-row md:justify-between items-start gap-8 md:gap-20 py-16 w-full md:max-w-4/5 md:mx-auto"
   >
     <div class="flex-1">
-      <img src={empaqueImg.src} alt="Imagen del producto." />
+      <Carousel />
     </div>
 
     <div class="flex-1 space-y-6">
